Added new background & updated tagline.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -26,7 +26,8 @@
   <div class="small-12 columns">
     <h5 class="section-subheader">WHAT MY CLIENTS SAY</h5>
     <blockquote>Pavan is excellent at analyzing websites. He helped us in simplifying our homepage design and focusing on the primary value we provide our users. Going through discovery with Pavan helped us identify the various choices we have and consciously pick the ones we felt we were best suited to execute. I would happily recommend Pavan to anyone that needs guidance in improving the design or conversion rates of their websites.<cite>Pradeep Chauhan, CEO of OnContracting.com</cite></blockquote>
-    <blockquote>Pavan was a great addition to our team. He works independently, takes initiatives and meets his commitments and time lines.  Pavan took our web site and rebuilt it with our new products and markets, made it very clean and usable and did so quickly, efficiently and in a manner that will allow us to grow for some time.  The overall work was of a first class quality and I recommend Pavan without reservation and with the highest of accolades. And he is a great guy! <cite>Brian Bogosian, CEO of SALT Technologies</cite></blockquote>
+    
+    <blockquote>Pavan took our web site and rebuilt it with our new products and markets, made it very clean and usable and did so quickly, efficiently and in a manner that will allow us to grow for some time.  The overall work was of a first class quality and I recommend Pavan without reservation and with the highest of accolades. And he is a great guy! <cite>Brian Bogosian, CEO of SALT Technologies</cite></blockquote>
   </div>
 </div>
 
