--- a/scss/app.scss
+++ b/scss/app.scss
@@ -19,7 +19,7 @@
   "foundation/components/inline-lists",
 //   "foundation/components/joyride",
 //   "foundation/components/keystrokes",
-//   "foundation/components/labels",
+  "foundation/components/labels",
 //   "foundation/components/magellan",
 //   "foundation/components/orbit",
 //   "foundation/components/pagination",
@@ -44,4 +44,5 @@
 
 @import "base";
 @import "graybike";
-@import "simpletextrotator";
+@import "home";
+@import "work";
