Added true currency work page.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -5,8 +5,10 @@
   <div class="small-12 columns">
     <ul class="small-block-grid-2 medium-block-grid-4">
       <li class="text-center project bounceIn animated">
-        <img src="/images/work/truecurrency/tc-thumbnail.png">
-        <h3><small>True Currency</small></h3>
+        <a href="/work/true-currency/">
+          <img src="/images/work/truecurrency/tc-thumbnail.png">
+          <h3><small>True Currency</small></h3>
+        </a>
       </li>
       <li class="text-center project bounceIn animated">
         <img src="/images/work/2teecouture/2tee-thumbnail.png">
