--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -1,7 +1,7 @@
 .work {
   .hero-container {
     max-width: 100%;
-    background: $blue url('/images/work-bag-dark.jpg') !important;
+    background: $blue url('/images/work-bag-blue.jpg') !important;
     // background: $blue url('/images/comp-notebook-background-dark.jpg') !important;
     background-attachment: fixed !important;
     background-position: center center !important;
