Added 2tee Couture.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -11,8 +11,10 @@
         </a>
       </li>
       <li class="text-center project bounceIn animated">
-        <img src="/images/work/2teecouture/2tee-thumbnail.png">
-        <h3><small>2tee Couture</small></h3>
+        <a href="/work/2tee-couture/">
+          <img src="/images/work/2teecouture/2tee-thumbnail.png">
+          <h3><small>2tee Couture</small></h3>
+        </a>
       </li>
       <li class="text-center project bounceIn animated">
         <img src="/images/work/salt/salt-thumbnail.png">
