Added view project overlay.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -6,14 +6,21 @@
     <ul class="small-block-grid-2 medium-block-grid-4">
       <li class="text-center project bounceIn animated">
         <a href="/work/true-currency/">
-          <img src="/images/work/truecurrency/tc-thumbnail.png">
+          <div class="img-wrapper">
+            <img class="overlay" src="/images/work/view-project.png">
+            <img src="/images/work/truecurrency/tc-thumbnail.png">
+          </div>
           <h3><small>True Currency</small></h3>
         </a>
       </li>
       <li class="text-center project bounceIn animated">
         <a href="/work/2tee-couture/">
-          <img src="/images/work/2teecouture/2tee-thumbnail.png">
+          <div class="img-wrapper">
+            <img class="overlay" src="/images/work/view-project.png">
+            <img src="/images/work/2teecouture/2tee-thumbnail.png">
+          </div>
           <h3><small>2tee Couture</small></h3>
+
         </a>
       </li>
       <li class="text-center project bounceIn animated">
