Added SALT technologies.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -24,8 +24,13 @@
         </a>
       </li>
       <li class="text-center project bounceIn animated">
-        <img src="/images/work/salt/salt-thumbnail.png">
-        <h3><small>SALT Technologies</small></h3>
+        <a href="/work/salt-technologies/">
+          <div class="img-wrapper">
+            <img class="overlay" src="/images/work/view-project.png">
+            <img src="/images/work/salt/salt-thumbnail.png">
+          </div>
+          <h3><small>SALT Technologies</small></h3>
+        </a>
       </li>
       <li class="text-center project bounceIn animated">
         <img src="/images/work/oncontracting/oc-thumbnail.png">
