--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -15,4 +15,32 @@
   img {
     border: 1px solid #767676;
   }
+
+  .project-img {
+    .image {
+      position: relative;
+    }
+    .caption {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      background: rgba(118, 118, 118, 0.7);
+      color: #fff !important;
+      @include transition(all 0.3s ease-in-out);
+      span {
+        position: relative;
+        width: 100%;
+        font-family: "Roboto Slab", serif;
+        font-weight: 400;
+      }
+    }
+
+    &:hover {
+      .caption {
+        opacity: 1;
+        @include transition(all 0.3s ease-in-out);
+      }
+    }
+  }  
 }
