Added more html / css

--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -42,6 +42,9 @@
     }
   }
   
+  .screenshots {
+    margin-top: rem-calc(40);
+  }
   .screenshots .section-subheader {
     margin-top: rem-calc(10);
   }
