Removed 2tee Couture.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -3,9 +3,9 @@
   <h3 class="section-header">WORK</h3>
   
   <div class="small-12 columns">
-    <ul class="small-block-grid-2 medium-block-grid-4">
+    <ul class="small-block-grid-2 medium-block-grid-3">
       <li class="text-center project bounceIn animated">
-        <a href="/work/true-currency/">
+        <a href="/work/true-currency">
           <div class="img-wrapper">
             <img class="overlay" src="/images/work/view-project.png">
             <img src="/images/work/truecurrency/tc-thumbnail.png">
@@ -14,17 +14,7 @@
         </a>
       </li>
       <li class="text-center project bounceIn animated">
-        <a href="/work/2tee-couture/">
-          <div class="img-wrapper">
-            <img class="overlay" src="/images/work/view-project.png">
-            <img src="/images/work/2teecouture/2tee-thumbnail.png">
-          </div>
-          <h3><small>2tee Couture</small></h3>
-
-        </a>
-      </li>
-      <li class="text-center project bounceIn animated">
-        <a href="/work/salt-technologies/">
+        <a href="/work/salt-technologies">
           <div class="img-wrapper">
             <img class="overlay" src="/images/work/view-project.png">
             <img src="/images/work/salt/salt-thumbnail.png">
@@ -33,9 +23,15 @@
         </a>
       </li>
       <li class="text-center project bounceIn animated">
-        <img src="/images/work/oncontracting/oc-thumbnail.png">
-        <h3><small>OnContracting</small></h3>
+      <a href="/work/oncontracting">
+          <div class="img-wrapper">
+            <img class="overlay" src="/images/work/view-project.png">
+            <img src="/images/work/oncontracting/oc-thumbnail.png">
+          </div>
+          <h3><small>OnContracting</small></h3>
+        </a>
       </li>
+
     </ul>
   </div>
 
