--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -44,9 +44,10 @@
   
   .screenshots {
     margin-top: rem-calc(40);
-  }
-  .screenshots .section-subheader {
-    margin-top: rem-calc(10);
+    
+    .section-subheader {
+      margin-top: rem-calc(10);
+    }
   }
   
   .no-borders img {
