--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}">
     <script src="/js/modernizr/modernizr.js"></script>
+    <meta name="google-site-verification" content="ttHE6FHFrDTaNHXO11XFWVIAjLEwXb-Md5ueNCXcfSw" />
 </head>
