--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,15 @@
   <script src='/js/foundation/js/foundation.js'  type='text/javascript'></script>
   <!-- <script src='/js/foundation/js/foundation/foundation.clearing.js'  type='text/javascript'></script> -->
   <script src='/js/app.js'  type='text/javascript'></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-51168710-1', 'graybike.co');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
