--- a/_includes/services-clients.html
+++ b/_includes/services-clients.html
@@ -26,7 +26,7 @@
       <img class="client-logo" src="/images/logos/oncontracting.png">
     </li>
     <li>
-      <img class="client-logo" src="/images/logos/1800flowers.png">
+      <img class="client-logo" src="/images/logos/moovweb.png">
     </li>
   </ul>
 </div>
