--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -54,8 +54,12 @@
         background: #fff;
         color: $blue;  
       }
-      
+
     }
+    .section-subheader {
+      color: #fff;
+      display: none;
+     }
   }
 
 }
