Better form error & submission handling.

--- a/_includes/hireme.html
+++ b/_includes/hireme.html
@@ -45,11 +45,12 @@
                 <button type="submit">Submit</button>
             </div>
         </div>
-        <div class="row">
-            <div class="large-12 columns">
-                <h5 class="sent section-subheader">Thanks for sending your message! I'll be in touch soon.</h5>
-                <h5 class="error section-subheader">Please fill out all the fields before sending your message.</h5>
-            </div>
-        </div>
+
     </form>
+
+    <div class="small-12 columns text-center">
+                <h5 id="sent" class="section-subheader">Thanks for sending your message! I'll be in touch soon.</h5>
+                <h5 id="error" class="error section-subheader">Please fill out all the fields before sending your message.</h5>
+            </div>
+    </div>
 </div>
