Removing bounceIn animations.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -4,7 +4,7 @@
   
   <div class="small-12 columns">
     <ul class="small-block-grid-2 medium-block-grid-3">
-      <li class="text-center project bounceIn animated">
+      <li class="text-center project ">
         <a href="/work/true-currency">
           <div class="img-wrapper">
             <img class="overlay" src="/images/work/view-project.png">
@@ -13,7 +13,7 @@
           <h3><small>True Currency</small></h3>
         </a>
       </li>
-      <li class="text-center project bounceIn animated">
+      <li class="text-center project">
         <a href="/work/salt-technologies">
           <div class="img-wrapper">
             <img class="overlay" src="/images/work/view-project.png">
@@ -22,7 +22,7 @@
           <h3><small>SALT Technologies</small></h3>
         </a>
       </li>
-      <li class="text-center project bounceIn animated">
+      <li class="text-center project">
       <a href="/work/oncontracting">
           <div class="img-wrapper">
             <img class="overlay" src="/images/work/view-project.png">
