--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
     <div class="row">
         <div class="small-12 medium-4 columns">
-            <div class="site-title bounceIn animated">
+            <div class="site-title">
                 <div class="site-logo">
                     <a href="{{ site.baseurl }}/"><img src="/images/logo.png"></a>
                 </div>
