--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -27,9 +27,9 @@
     }
     .overlay {
       opacity: 0;
-      height: 100%;
+      // height: 100%;
       position: absolute;
-      width: 100%;
+      // width: 100%;
       @include transition(all 0.3s ease-in-out);
     }
     a:hover {
