Added GA tracking

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             <h5><a href="/blog">BLOG</a></h5>
         </div>
         <div class="small-6 medium-2 columns nav-link">
-            <h5><a href="/#hire" class="blue-button">HIRE ME</a></h5>
+            <h5><a href="/#hire" id="hire-button" class="blue-button">HIRE ME</a></h5>
         </div>
     </div>
 </header>
