--- a/_includes/hireme.html
+++ b/_includes/hireme.html
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
             <div class="large-12 columns">
-                <button type="submit">Submit</button>
+                <button id="hire-submit-button" type="submit">Submit</button>
             </div>
         </div>
 
