Adding contact information.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,16 @@
 <footer class="site-footer">
   <div class="row">
-    <div class="small-12 columns text-center">
-      <p>COPYRIGHT © 2014 GRAY BIKE</p>
+
+    <div class="medium-6 medium-push-6  columns text-center">
+      <ul class="small-block-grid-3">
+        <li><a href="mailto:pavan@graybike.co" target="_blank">EMAIL</a></li>
+        <li><a href="http://twitter.com/ptrikutam" target="_blank">TWITTER</a></li>
+        <li><a href="http://www.linkedin.com/in/pavantrikutam" target="_blank">LINKEDIN</a></li>
+      </ul>
     </div>
+
+    <div class="medium-6 medium-pull-6 columns small-only-text-center">
+      <p>COPYRIGHT © 2014 GRAY BIKE</p>
+    </div>    
   </div>
 </footer>
