Revert "Removed email until email gets fixed on google apps."
This reverts commit 32b25e26b356b457e4d3e6a5d7f307e18d4a4fb3.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,5 +9,5 @@
 <div class="small-12 medium-8 columns">
   <p>Gray Bike is a one-man software consultancy run by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems.</p>
   <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
-  <p>Interested in working together? <a href="/#hire">Let's Talk.</a> <!-- Of course, you can always drop me a line at: pavan at graybike dot co --></p>
+  <p>Interested in working together? <a href="/#hire">Let's Talk.</a> Of course, you can always drop me a line at: pavan at graybike dot co</p>
 </div>
