Changing wording to be 'we' instead of 'i'

--- a/_includes/hireme.html
+++ b/_includes/hireme.html
@@ -1,9 +1,9 @@
 <div class="small-12 columns">
-    <h3 class="section-header">HIRE ME</h3>
+    <h3 class="section-header">HIRE US</h3>
 </div>
 <div class="small-12 medium-4 columns">
-    <p>Got a cool project? I'd love to hear about it! Send me a little info and we'll get started!</p>
-    <p><em>If possible, let me know your timeline, your current website or app, and any other info I may need to understand your project.</em></p>
+    <p>Got a cool project? We'd love to hear about it! Send us a little info and we'll get started!</p>
+    <p><em>If possible, let us know your timeline, your current website or app, and any other info we may need to understand your project.</em></p>
 </div>
 <div class="small-12 medium-8 columns">
     <form id="contact-form">
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="large-12 columns">
-                <label>Tell me about your project! The more detail you provide, the better I can help you!
+                <label>Tell us about your project! The more detail you provide, the better we can help.
                     <textarea id="form-project" placeholder="Project description"></textarea>
                 </label>
             </div>
@@ -49,7 +49,7 @@
     </form>
 
     <div class="small-12 columns text-center">
-        <h5 id="sent" class="section-subheader">Thanks for sending your message! I'll be in touch soon.</h5>
+        <h5 id="sent" class="section-subheader">Thanks for sending your message! We'll be in touch soon.</h5>
         <h5 id="error" class="error section-subheader">Please fill out all the fields before sending your message.</h5>
     </div>
 </div>
