--- a/_includes/services-clients.html
+++ b/_includes/services-clients.html
@@ -1,5 +1,5 @@
 <div class="small-12 columns">
-  <h5 class="section-subheader">SOME FOLKS I'VE WORKED WITH</h5>  
+  <h5 class="section-subheader">SOME FOLKS WE'VE WORKED WITH</h5>  
 </div>
 
 <div class="small-12 columns">
