--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -751,7 +751,7 @@ $paragraph-font-weight: 300;
 
 // We use these to control the timer styles
 // $orbit-timer-bg: rgba(255,255,255,0.3);
-// $orbit-timer-show-progress-bar: true;
+// $orbit-timer-show-progress-bar: false;
 
 // We use these to control the bullet nav styles
 // $orbit-bullet-nav-color: #ccc;
