--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,13 +1,14 @@
 
 <div class="small-12 columns">
-  <h3 class="section-header">ABOUT</h3>
+  <h3 class="section-header">ABOUT US</h3>
 </div>
+<div class="small-12 columns">
+  <p>Gray Bike is a small software consultancy in San Francisco. We work with designers & developers to build digital products for small businesses, non-profits, and startups. We believe communication and collaboration are paramount to the success of any project we work on. That's why we'll work hard to understand your needs, and make sure we're in constant communication with you as we move from concept to launch. We work best with clients that value these same principles, and trust us to provide valuable critique throughout the process.</p>
 
-<div class="small-6 small-offset-3 medium-offset-0 medium-4 columns text-center">
-  <img src="/images/me.png">
-</div>
-<div class="small-12 medium-8 columns">
-  <p>Gray Bike is a one-man software consultancy run by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems.</p>
-  <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
-  <p>Interested in working together? <a href="/#hire">Let's Talk.</a> Of course, you can always drop me a line at: pavan at graybike dot co</p>
+  <p>All of our projects are led by our Founder & Principal, <a href="http://pavantrikutam.com">Pavan Trikutam</a>, and we hire additional talent as needed on a per-project basis. We're small and nimble, and intend to stay that way. If you're looking for a large agency with an army of employees, we're probably not the best fit. However, if you have a project that would work with a small, responsive team that can accomplish big things, we can help.</p>
+
+  <p>Interested in working together? <a href="/#hire">Let's Talk.</a> Of course, you can always get in touch directly by emailing us at <a href="mailto:hello@graybike.co">hello@graybike.co</a> or calling us at: +1 (415) 326-3397. We'd love to hear from you.</p>
+
+  <h6 class="section-subheader">ABOUT PAVAN</h6>
+  <p>Pavan has over 8 years of experience building things for the web and mobile. In addition to helping folks build stuff at Gray Bike, he is co-founder and chief technologist of <a href="http://truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. He also mentors students learning front-end web development at <a href="http://thinkful.com/" target="_blank">Thinkful</a>.</p>
 </div>
