--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,9 @@
   <div class="row">
 
     <div class="medium-6 medium-push-6  columns text-center">
-      <ul class="small-block-grid-3">
-        <li><a href="mailto:pavan@graybike.co" target="_blank">EMAIL</a></li>
-        <li><a href="http://twitter.com/ptrikutam" target="_blank">TWITTER</a></li>
-        <li><a href="http://www.linkedin.com/in/pavantrikutam" target="_blank">LINKEDIN</a></li>
+      <ul class="small-block-grid-2">
+        <li><a href="mailto:hello@graybike.co" target="_blank">hello@graybike.co</a></li>
+        <li>415.326.3397</li>
       </ul>
     </div>
 
