--- a/_includes/work.html
+++ b/_includes/work.html
@@ -36,10 +36,11 @@
   </div>
 
   <div class="small-12 columns">
-    <h5 class="section-subheader">WHAT MY CLIENTS SAY</h5>
-    <blockquote>Pavan is excellent at analyzing websites. He helped us in simplifying our homepage design and focusing on the primary value we provide our users. Going through discovery with Pavan helped us identify the various choices we have and consciously pick the ones we felt we were best suited to execute. I would happily recommend Pavan to anyone that needs guidance in improving the design or conversion rates of their websites.<cite>Pradeep Chauhan, CEO of OnContracting.com</cite></blockquote>
-    
-    <blockquote>Pavan took our web site and rebuilt it with our new products and markets, made it very clean and usable and did so quickly, efficiently and in a manner that will allow us to grow for some time.  The overall work was of a first class quality and I recommend Pavan without reservation and with the highest of accolades. And he is a great guy! <cite>Brian Bogosian, CEO of SALT Technologies</cite></blockquote>
+    <h5 class="section-subheader">WHAT OUR CLIENTS SAY</h5>
+    <ul data-orbit data-options="slide_number:false;timer_show_progress_bar:false;">
+      <li><blockquote>Pavan is excellent at analyzing websites. He helped us in simplifying our homepage design and focusing on the primary value we provide our users. Going through discovery with Pavan helped us identify the various choices we have and consciously pick the ones we felt we were best suited to execute. I would happily recommend Pavan to anyone that needs guidance in improving the design or conversion rates of their websites.<cite>Pradeep Chauhan, CEO of OnContracting.com</cite></blockquote></li>
+      <li><blockquote>Pavan took our web site and rebuilt it with our new products and markets, made it very clean and usable and did so quickly, efficiently and in a manner that will allow us to grow for some time.  The overall work was of a first class quality and I recommend Pavan without reservation and with the highest of accolades. And he is a great guy! <cite>Brian Bogosian, CEO of SALT Technologies</cite></blockquote></li>
+    </ul>
   </div>
 </div>
 
@@ -48,17 +49,17 @@
   <div class="small-12 medium-5 columns">
     <h6 class="section-subheader">TECHNICAL</h6>
     <ul>
-      <li>Full Stack Web Design & Development (Back & Front End)</li>
+      <li>Full Stack Web Design & Development</li>
       <li>Android Design & Development</li>
-      <li>Shopify Apps & Themes</li>
+      <li>Shopify Apps, Stores, & Themes</li>
     </ul>
   </div>
   <div class="small-12 medium-5 medium-offset-2 columns">
     <h6 class="section-subheader">NON-TECHNICAL</h6>
     <ul>
       <li>UX Design</li>
+      <li>Information Architecture</li>
       <li>Content Strategy</li>
-      <li>Product Development</li>
     </ul>
   </div>
 </div>
