Adjusted work pages.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
 
   <p>All of our projects are led by our Founder & Principal, <a href="http://pavantrikutam.com">Pavan Trikutam</a>, and we hire additional talent as needed on a per-project basis. We're small and nimble, and intend to stay that way. If you're looking for a large agency with an army of employees, we're probably not the best fit. However, if you have a project that would work with a small, responsive team that can accomplish big things, we can help.</p>
 
-  <p>Interested in working together? <a href="/#hire">Let's Talk.</a> Of course, you can always get in touch directly by emailing us at <a href="mailto:hello@graybike.co">hello@graybike.co</a> or calling us at: +1 (415) 326-3397. We'd love to hear from you.</p>
+  <p>Interested in working together? <a href="/#hire">Let's Talk.</a> Of course, you can always get in touch directly by emailing us at <a href="mailto:hello@graybike.co">hello@graybike.co</a> or calling us at: 415.326.3397. We'd love to hear from you.</p>
 
   <h6 class="section-subheader">ABOUT PAVAN</h6>
   <p>Pavan has over 8 years of experience building things for the web and mobile. In addition to helping folks build stuff at Gray Bike, he is co-founder and chief technologist of <a href="http://truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. He also mentors students learning front-end web development at <a href="http://thinkful.com/" target="_blank">Thinkful</a>.</p>
