Added cool hover effects.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -4,31 +4,42 @@
   
   <div class="small-12 columns">
     <ul class="small-block-grid-2 medium-block-grid-3">
-      <li class="text-center project ">
+      <li class="text-center">
         <a href="/work/true-currency">
-          <div class="img-wrapper">
-            <img class="overlay" src="/images/work/view-project.png">
-            <img src="/images/work/truecurrency/tc-thumbnail.png">
+          <div class="project">
+            <img src="/images/work/truecurrency/tc-thumbnail.png">  
+            <div class="overlay"></div>
+            <div class="caption">
+              <h4 class="caption-title">True<span>Currency</span></h4>
+              <p>DESIGN & ENGINEERING</p>
+            </div>
           </div>
-          <h3><small>True Currency</small></h3>
         </a>
       </li>
-      <li class="text-center project">
+      <li class="text-center">
         <a href="/work/salt-technologies">
-          <div class="img-wrapper">
-            <img class="overlay" src="/images/work/view-project.png">
+          <div class="project">
             <img src="/images/work/salt/salt-thumbnail.png">
+            <div class="overlay"></div>
+            <div class="caption">
+              <h4 class="caption-title">SALT</h4>
+              <p>Strategy, DESIGN & ENGINEERING</p>
+
+            </div>
           </div>
-          <h3><small>SALT Technologies</small></h3>
+          
         </a>
       </li>
-      <li class="text-center project">
+      <li class="text-center">
         <a href="/work/oncontracting">
-          <div class="img-wrapper">
-            <img class="overlay" src="/images/work/view-project.png">
+          <div class="project">
             <img src="/images/work/oncontracting/oc-thumbnail.png">
+            <div class="overlay"></div>
+            <div class="caption">
+              <h4 class="caption-title">ON<span>CONTRACTING</span></h4>
+              <p>UX DESIGN & CONSULTING</p>
+            </div>
           </div>
-          <h3><small>OnContracting</small></h3>
         </a>
       </li>
 
