--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -15,30 +15,88 @@
 
 
   //Index Styles
-
+* {
+  -webkit-backface-visibility: hidden;
+}
 
   //Work Styles
   .project {
+    max-width: 300px;
+    max-height: 300px;
+    position: relative;
+    background: $blue;
+    
+
     img {
-      border: 2px solid $gray;
-    }
-    .img-wrapper {
       position: relative;
+      display: block;
+      min-height: 100%;
+      opacity: 0.8;
+      @include transition(opacity 0.35s);
     }
+
+
     .overlay {
-      opacity: 0;
-      // height: 100%;
       position: absolute;
-      // width: 100%;
-      @include transition(all 0.3s ease-in-out);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0.5;
+      background: $blue_b1;
     }
-    a:hover {
-      .overlay {
-        opacity: 1;
-        @include transition(all 0.3s ease-in-out);
+    
+    .caption {
+      // background-color: $blue;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      *, *:hover {
+        color: #fff;
+      }
+
+      h4{
+        padding-top: 30%;
+        text-transform: uppercase;
+        @include transition-property(transform);
+        @include transition-duration(0.35s);
+        @include transform(translate3d(0,-20px,0));
+        span {
+          font-weight: 700;
+        }
+      }
+
+      p {
+          margin: 1em;
+          padding: 1em;
+          border: 1px solid #fff;
+          font-size: 12px;
+          letter-spacing: 1px;
+          text-transform: uppercase;
+          opacity: 0;
+          -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+          transition: opacity 0.35s, transform 0.35s;
+          -webkit-transform: translate3d(0,20px,0);
+          transform: translate3d(0,20px,0);
       }
     }
-    margin-bottom: rem-calc(15);
+
+
+
+    &:hover {
+      h4 {
+        @include transform(translate3d(0,0,0));
+      }
+      p {
+        opacity: 1;
+        @include transform(translate3d(0,0,0) scale(1));
+      }
+      img {
+        opacity: 0.2;
+      }
+    }
 
   }
 
