--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -20,6 +20,7 @@ $gray_b1: #A5A5A5;
 $gray_b2: lighten($gray, 40%);
 
 $blue: #00688A;
+$blue_b1: #004961;
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
