Updated images & hover state.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -7,11 +7,11 @@
       <li class="text-center">
         <a href="/work/true-currency">
           <div class="project">
-            <img src="/images/work/truecurrency/tc-thumbnail.png">  
+            <img src="/images/work/truecurrency/tc-thumbnail.jpg">  
             <div class="overlay"></div>
             <div class="caption">
               <h4 class="caption-title">True<span>Currency</span></h4>
-              <p>DESIGN & ENGINEERING</p>
+              <p>Strategy, DESIGN & ENGINEERING</p>
             </div>
           </div>
         </a>
@@ -19,7 +19,7 @@
       <li class="text-center">
         <a href="/work/salt-technologies">
           <div class="project">
-            <img src="/images/work/salt/salt-thumbnail.png">
+            <img src="/images/work/salt/salt-thumbnail.jpg">
             <div class="overlay"></div>
             <div class="caption">
               <h4 class="caption-title">SALT</h4>
@@ -33,16 +33,15 @@
       <li class="text-center">
         <a href="/work/oncontracting">
           <div class="project">
-            <img src="/images/work/oncontracting/oc-thumbnail.png">
+            <img src="/images/work/oncontracting/oc-thumbnail.jpg">
             <div class="overlay"></div>
             <div class="caption">
               <h4 class="caption-title">ON<span>CONTRACTING</span></h4>
-              <p>UX DESIGN & CONSULTING</p>
+              <p>Strategy & UX DESIGN</p>
             </div>
           </div>
         </a>
       </li>
-
     </ul>
   </div>
 
