--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -22,14 +22,13 @@
   //Work Styles
   .project {
     position: relative;
-    background: $blue;
+    background: $blue_b1;
     
 
     img {
       position: relative;
       display: block;
-      min-height: 100%;
-      opacity: 0.8;
+      opacity: 0.4;
       @include transition(opacity 0.35s);
     }
 
@@ -41,7 +40,9 @@
       width: 100%;
       height: 100%;
       opacity: 0.5;
-      background: $blue_b1;
+      // background: $blue_b1;
+      // @include transition(opacity 0.35s);
+
     }
     
     .caption {
