--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -28,7 +28,7 @@
     img {
       position: relative;
       display: block;
-      opacity: 0.4;
+      opacity: 0.6;
       @include transition(opacity 0.35s);
     }
 
@@ -40,8 +40,8 @@
       width: 100%;
       height: 100%;
       opacity: 0.5;
-      // background: $blue_b1;
-      // @include transition(opacity 0.35s);
+      background: $blue_b1;
+      @include transition(opacity 0.35s);
 
     }
     
@@ -90,8 +90,8 @@
         opacity: 1;
         @include transform(translate3d(0,0,0) scale(1));
       }
-      img {
-        opacity: 0.2;
+      .overlay {
+        opacity: 0.8;
       }
     }
 
