--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,9 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.11/slick.css"/>
     <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}">
     <script src="/js/modernizr/modernizr.js"></script>
+
     <meta name="google-site-verification" content="mGFqkZIpRsu-KTICkZB_Lk453ig5zwNKhB2WrqWtqTg" />
 </head>
