--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   {% include footer.html %}
   <script src='/js/jquery-2.1.1.min.js'  type='text/javascript'></script>
   <script src='/js/foundation/js/foundation.js'  type='text/javascript'></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.11/slick.min.js"></script>
   <script src='/js/app.js'  type='text/javascript'></script>
 
   <script>
