--- a/_includes/services-clients.html
+++ b/_includes/services-clients.html
@@ -14,16 +14,16 @@
       <img class="client-logo" src="/images/logos/bloomingdales.png">
     </li>
     <li>
-      <img class="client-logo" src="/images/logos/designlikewhoa.png">
+      <img class="client-logo" src="/images/logos/1800flowers.png">
     </li>
     <li>
-      <img class="client-logo" src="/images/logos/2teecouture.png">
+      <img class="client-logo" src="/images/logos/minerva.png">
     </li>
     <li>
       <img class="client-logo" src="/images/logos/salt.png">
     </li>
     <li>
-      <img class="client-logo" src="/images/logos/oncontracting.png">
+      <img class="client-logo" src="/images/logos/soma.png">
     </li>
     <li>
       <img class="client-logo" src="/images/logos/moovweb.png">
