--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,11 @@
 {% include head.html %}
 
 <body>
+  {% if page.noheader %}
+  {% else %}
+    {% include header.html %}
+  {% endif %}
 
-  {% include header.html %}
 
   <div class="page-content">
     <div class="wrap">
