--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,11 @@ layout: default
     <div class="post">
       <header class="post-header">
         <h1>{{ page.title }}</h1>
-        <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+        <div class="row meta">
+          <div class="description small-8 columns">{% if page.description %}{{ page.description }}{% endif %}</div>
+          <div class="meta small-4 columns text-right">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</div>
+        </div>
+        
       </header>
 
       <article class="post-content">
