--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -22,6 +22,11 @@
     margin-top: $paragraph-margin-bottom;   
   }
 
+  .meta {
+    font-style: italic;
+    font-size: 14px;
+  }
+
   blockquote p {
     margin-top: 0;
   }
