better padding on blog page.

--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -15,6 +15,11 @@
     .blog-title {
       margin-bottom: 0;
     }
+
+    .posts {
+      margin-top: rem-calc(40);
+      margin-bottom: rem-calc(40);
+    }
 }
 
 .post {
