--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -41,6 +41,7 @@
   }
 
   h4, h5, h6 {
+    margin-top: 0.5em;
     font-family: "Open Sans", sans-serif;
     // text-align: center;
     font-weight: 400;
