add onetouch to projects

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -42,6 +42,18 @@
           </div>
         </a>
       </li>
+      <li class="text-center">
+        <a href="/work/salt-one-touch">
+          <div class="project">
+            <img src="/images/work/salt-onetouch/salt-onetouch-thumbnail.jpg">
+            <div class="overlay"></div>
+            <div class="caption">
+              <h4 class="caption-title">SALT ONE<span>TOUCH</span></h4>
+              <p>DESIGN & ENGINEERING</p>
+            </div>
+          </div>
+        </a>
+      </li>
     </ul>
   </div>
 
