--- a/_includes/work.html
+++ b/_includes/work.html
@@ -17,7 +17,7 @@
         </a>
       </li>
       <li class="text-center">
-        <a href="/work/salt-technologies">
+        <a href="/work/salt-technology">
           <div class="project">
             <img src="/images/work/salt/salt-thumbnail.jpg">
             <div class="overlay"></div>
@@ -64,7 +64,7 @@
         <blockquote>Pavan is excellent at analyzing websites. He helped us in simplifying our homepage design and focusing on the primary value we provide our users. Going through discovery with Pavan helped us identify the various choices we have and consciously pick the ones we felt we were best suited to execute. I would happily recommend Pavan to anyone that needs guidance in improving the design or conversion rates of their websites.<cite>Pradeep Chauhan, CEO of OnContracting.com</cite></blockquote>
       </div>
       <div>
-        <blockquote>Pavan took our web site and rebuilt it with our new products and markets, made it very clean and usable and did so quickly, efficiently and in a manner that will allow us to grow for some time.  The overall work was of a first class quality and I recommend Pavan without reservation and with the highest of accolades. And he is a great guy! <cite>Brian Bogosian, CEO of SALT Technologies</cite></blockquote>
+        <blockquote>Pavan took our web site and rebuilt it with our new products and markets, made it very clean and usable and did so quickly, efficiently and in a manner that will allow us to grow for some time.  The overall work was of a first class quality and I recommend Pavan without reservation and with the highest of accolades. And he is a great guy! <cite>Brian Bogosian, CEO of SALT Technology</cite></blockquote>
       </div>
       <div>
         <blockquote>Pavan is a very talented engineer. We have worked with Pavan since he was at Moovweb and exclusively use his services for iOS/Android app changes. He is very hands on, easy going and a great fit for our demanding culture. Pavan sticks to his timelines and price quotes.<cite>Kapil Bansal, Director, Mobile at 1800flowers.com</cite></blockquote>
